# PngCompress

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/tencent/mp/pngcompress/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  log.hpp  native-lib.cpp
app/src/main/java/com/rober/pngcompress/: MainActivity.kt  PngQuantize.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tencent/mp/pngcompress/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
